2013-09-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Disklist.swg (match_disklist, reset_disklist,
	  add_holding_to_disklist): New methods.
	* perl/Amanda/Disklist.pod: Document them.
	* installcheck/Amanda_Disklist.pl: Create a debug file.

2013-09-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/cmdfile.c (add_cmd_in_memory,
	  cmdfile_get_ids_for_holding): New functions.
	* server-src/cmdfile.h (add_cmd_in_memory,
	  cmdfile_get_ids_for_holding): Prototype for new functions.
	* perl/Amanda/Cmdfile.swg: Perlify server-src/cmdfile.c
	* perl/Amanda/Cmdfile.pod: Document it.
	* perl/Makefile.am: Add Cmdfile module.

2013-09-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Handle displayunit,
	  add --detail, --summary --stats and --locale-independent-date-format,
	  remove --dumping, --waitdumping, --waittaper, --dumpingtape,
	  --writingtape, --finished, --failed, --estimate, --gestimate
	* perl/Amanda/Status.pm: Set $self->{'starttime-locale-independent'}
	* man/xml-source/amstatus.8.xml: Document them.

2013-09-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Label.pm: Fix.
	* server-src/tapefile.c: Speedup parsing.

2013-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix use of NULL pointer.

2013-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Amdump.pm: cleanup.
	* server-src/amanda.psgi.pl: Add Amanda::JSON::Amdump::run
	* server-src/amdump.pl: cleanup.

2013-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Fix previous patch.

2013-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/JSON/Report.pm: Take a trace_log as argument.
	* perl/Amanda/JSON/Status.pm: Take a amdump_log as argument.
	* perl/Amanda/Message.pod: Amndmp use 200000 message code.
	* perl/Makefile.am: Add perl/Amanda/Amdump.pm and
			        perl/Amanda/JSON/Amdump.pm
	* server-src/amdump.pl: Move all codes to a perl module.