@@ -1,4 +1,7 @@
 2013-09-12  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Holding.pm: Typo.
+
+2013-09-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Disklist.swg (match_disklist, reset_disklist,
 	  add_holding_to_disklist): New methods.
 	* perl/Amanda/Disklist.pod: Document them.
